j3dcore: remove the displayID from screen as all remaining pipelines ignore it
Signed-off-by: Harvey Harrison <harvey.harrison@gmail.com>